src/objects/Order_Gemco__c.object
<CustomObject>
    <fields>
        <fullName>AccountCarrier__c</fullName>
        <label>Transportadora</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Billing__c</fullName>
        <label>Data de Liberação para Faturamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Delivery__c</fullName>
        <label>Data prevista para entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Purchase__c</fullName>
        <label>Data de Compra</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDPedidoGemco__c</fullName>
        <externalId>true</externalId>
        <label>Número do Pedido Gemco</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <externalId>true</externalId>
        <label>Nota Fiscal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_mero_do_Pedido_Maga__c</fullName>
        <formula>Numero_do_Pedido__r.Number_of_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número do Pedido</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_do_Pedido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Número do Pedido SF</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Pedidos Gemco</relationshipLabel>
        <relationshipName>Pedidos_Gemco</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Forma de Pagamento | Parcelamento</label>
        <picklist>
            <picklistValues>
                <fullName>A vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcelado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLIP__c</fullName>
        <label>Slip</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Processing_Date__c</fullName>
        <label>Data do Processamento da Venda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Vendedor</label>
        <picklist>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Cidade de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>País de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>Cep de Entrega</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Estado de Entrega</label>
        <picklist>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Rua de Entrega</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Date_Delivery__c</fullName>
        <label>Data da efetivação da entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Order__c</fullName>
        <label>Status do Pedido Slip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pedido Gemco</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>An_lise_de_fraude_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Análise de fraude Samsung</label>
        <queue>An_lise_de_fraude_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Ativo_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Ativo</label>
        <queue>Atendimento_Samsung_Ativo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung</label>
        <queue>Atendimento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atendimento_Samsung_Suporte_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Atendimento Samsung Suporte</label>
        <queue>Atendimento_Samsung_Suporte</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CD350_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>CD350 Samsung</label>
        <queue>CD350_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Financeiro_Contas_a_Receber_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Financeiro – Contas a Receber Samsung</label>
        <queue>Financeiro_Contas_a_Receber_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Refaturamento_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Refaturamento Samsung</label>
        <queue>Processamento_Refaturamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Samsung</label>
        <queue>Processamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Suporte_Comercial_Samsung_Order_Gemco</fullName>
        <filterScope>Queue</filterScope>
        <label>Suporte Comercial Samsung</label>
        <queue>Suporte_Comercial_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Número do Pedido Gemco SF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos Gemco</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>